Fix the bug related to scrollbars.

--- a/src/Containers/App.module.css
+++ b/src/Containers/App.module.css
@@ -1,5 +1,6 @@
 .app {
     height: 100vh;
+    min-width: 1100px;
     display: flex;
     flex-direction: column;
 }
@@ -66,11 +67,12 @@
     display: flex;
     flex-direction: row;
     min-width: 75%;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 .centralPanes{
     flex: 6 1 0;
     display: flex;
+    min-width: 904px;
     flex-direction: row;
     align-content: stretch;
 }
